# Demand-Forecasting-for-SME-s

./: README.md  Triode Demonstration chat log.docx  pyproject.toml
.github/: copilot-instructions.md
External Drivers/: 1615__monthly__Mean_air_temperature__Deg_C.csv  2112__monthly__Mean_air_temperature__Deg_C.csv  4843__monthly__Mean_air_temperature__Deg_C.csv  Offical Cash Rate (OCR) & 90 day bank bill rate.csv  PMI index.xlsx  hm1.xlsx
data/: Shipment Items History 20251022.xlsx
notebook/: Advanced forecasting model incorporating external data.ipynb  Demand Forecasting Notebook.ipynb  Demand-Forecasting 2.ipynb  Demand-Forecasting 3.ipynb  Demand-Forecasting.ipynb  Sarimax-model.ipynb
